# niter

./: Cargo.toml  README.md  TODO
src/: adapter.rs  advertisement_monitor.rs  advertising.rs  agent.rs  assigned_numbers.rs  central.rs  device.rs  error.rs  lib.rs  macros.rs  peripheral.rs  profile.rs  uuid.rs
src/central/: mod.rs
src/gatt/: characteristic.rs  descriptor.rs  manager.rs  profile.rs  service.rs
src/media/: control.rs  endpoint.rs  folder.rs  item.rs  mod.rs  player.rs  transport.rs
src/mesh/: application.rs  attention.rs  element.rs  mod.rs  network.rs
src/mesh/provision/: manager.rs  mod.rs  provisioner.rs  provisioning_agent.rs
src/misc/: battery.rs  health.rs  input.rs  mod.rs  network.rs  thermometer.rs
src/obex/: agent.rs
src/peripheral/: mod.rs
src/peripheral/characteristic/: characteristic_delegate.rs  mod.rs
src/peripheral/descriptor/: descriptor_delegate.rs  mod.rs
src/peripheral/service/: mod.rs  service_delegate.rs
src/platform/bluez/: adapter.rs  advertisement_monitor.rs  advertising.rs  agent.rs  device.rs  macros.rs  mod.rs  profile.rs
src/platform/bluez/gatt/: characteristic.rs  descriptor.rs  profile.rs  service.rs
src/platform/bluez/media/: endpoint.rs  folder.rs  item.rs  mod.rs  player.rs  transport.rs
src/platform/bluez/mesh/: application.rs  attention.rs  element.rs  mod.rs  network.rs  node.rs
src/platform/bluez/mesh/provision/: manager.rs  mod.rs  provisioner.rs  provisioning_agent.rs
src/platform/bluez/misc/: mod.rs
src/platform/bluez/obex/: agent.rs  client.rs  message.rs  mod.rs
src/platform/bluez/utils/: array.rs  map.rs  mod.rs
src/platform/macos/: mod.rs
src/platform/windows/: adapter.rs  mod.rs
src/spec/: assigned_numbers.rs  ble_appearance.rs  characteristic.rs  descriptor.rs  format.rs  gap.rs  mod.rs  unit.rs
src/sys/: mod.rs
src/sys/bluez/: adapter.rs  advertising.rs  agent.rs  device.rs  mod.rs  profile.rs
src/sys/bluez/gatt/: characteristic.rs  descriptor.rs  mod.rs  service.rs
src/sys/bluez/media/: endpoint.rs  folder.rs  item.rs  player.rs  transport.rs
src/sys/bluez/mesh/: application.rs  network.rs
src/sys/bluez/mesh/provision/: manager.rs
src/sys/bluez/misc/: network.rs  sap.rs
src/sys/bluez/spec/: ble_appearance.rs  mod.rs
src/sys/bluez/utils/: zvariantable_array.rs
src/utils/: mod.rs  zvariantable_array.rs  zvariantable_map.rs
tests/: adapter.rs
