[package]
name = "niter"
version = "0.1.0"
documentation = "https://docs.rs/niter"
repository = "https://github.com/OtaK/niter"
readme = "README.md"
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = [
    "bluetooth",
    "bluez",
    "dbus",
    "zbus"
]
include = [
    "**/*.rs",
    "Cargo.toml"
]

[features]
default = []
bluez-next = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "0.8", features = ["serde"] }
serde_repr = "0.1"
strum = { version = "0.20", features = ["derive"] }
num_enum = "0.5"
bitflags = "1.2"
async-std = "1.9"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "1.9"
zvariant_derive = "2.6"
zvariant = "2.6"
