[package]
name = "niter"
version = "0.1.0"
documentation = "https://docs.rs/niter"
repository = "https://github.com/OtaK/niter"
readme = "README.md"
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
keywords = [
    "bluetooth",
    "bluez",
    "dbus",
    "zbus",
    "windows",
    "macos"
]
include = [
    "**/*.rs",
    "Cargo.toml"
]

[features]
default = []
bluez-next = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "0.8", features = ["serde"] }
serde_repr = "0.1"
strum = { version = "0.23", features = ["derive"] }
num_enum = "0.5"
bitflags = "1.2"
async-std = "1.9"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "1.9"
zvariant_derive = "2.10"
zvariant = "2.10"

[target.'cfg(windows)'.dependencies.windows]
version = "0.29"
features = [
    "alloc",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Devices_Bluetooth_Background",
]
